UUID come id e risolto un po' di warning